# vsagent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  dev.sh  index.html  multi_agent_ide_plan.md  package-lock.json  package.json  vite.config.ts
docs/superpowers/plans/: 2026-03-20-vsagent-phase-a.md
docs/superpowers/specs/: 2026-03-20-vsagent-design.md
scripts/: setup-webkit.sh
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: conversations.rs  files.rs  messages.rs  mod.rs  pty.rs  search.rs  shell.rs  ssh.rs  workspaces.rs
src-tauri/src/db/: conversation.rs  message.rs  migrations.rs  mod.rs  workspace.rs
src-tauri/src/domain/: types.rs
src-tauri/src/importer/: mod.rs  parser.rs  sync.rs
src-tauri/src/pty/: mod.rs
src-tauri/src/ssh/: mod.rs
src-tauri/src/watcher/: mod.rs
src/components/common/: ConfirmDialog.tsx  StatusDot.tsx  TimeAgo.tsx
src/components/conversation/: AssistantMessage.tsx  ConversationView.tsx  MessageItem.tsx  MessageList.tsx  RemoteConversationView.tsx  UserMessage.tsx
src/components/layout/: MainPanel.tsx  ResizeHandle.tsx  Sidebar.tsx
src/components/panels/: MultiPanelArea.tsx
src/components/settings/: SettingsPanel.tsx
src/components/sidebar/: ConversationEditDialog.tsx  ConversationItem.tsx  SearchBar.tsx  SearchResultItem.tsx  SidebarContent.tsx  WorkspaceGroup.tsx
src/lib/: contentBlocks.ts  tauri.ts  utils.test.ts  utils.ts
src/types/: index.ts
(+14 files in other folders)
