[package]
name = "vsagent"
version = "0.1.0"
description = "Agent IDE - unified session management"
authors = ["emopointer"]
edition = "2021"

[lib]
name = "vsagent_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "modern-full"] }
rusqlite_migration = "1.3"
notify = "7"
notify-debouncer-mini = "0.4"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"

[dev-dependencies]
tempfile = "3"
